--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://howshea.github.io
+url: https://howshea.coding.me
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -69,7 +69,9 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: git@github.com:howshea/howshea.github.io.git
+  repository:
+    coding: git@git.coding.net:Howshea/Howshea.coding.me.git
+    github: git@github.com:howshea/howshea.github.io.git
   branch: master
 
 server:
